# ryguy-ai

./: .gitignore  README.md  _config.yml  bicep-demo.html  html_ids.txt  index.html  js_ids.txt  next.config.mjs  package-lock.json  package.json  requirements.txt  server.py  server_fixed.py  tailwind.config.ts
BICEP/: .gitignore  LICENSE  README.md  bicep_core.py  pyproject.toml  requirements.txt  setup.py  test_deterministic_kernel.py
BICEP/examples/: biology_cell_migration.py  engineering_signal_processing.py  ml_uncertainty_quantification.py  physics_particle_diffusion.py
BICEP/src/bicep/: brownian_graph_walk.py  brownian_motion.py  stochastic_control.py  triton_kernel.py
BICEP/src/bicep/sde_int/: binding.cpp  binding.cu
BICEP/tests/: test_brownian_motion_paths.py  test_brownian_motion_paths_edge_cases.py  test_calculate_optimal_parameters.py  test_detect_system_resources.py  test_simulate_single_path.py  test_stress.py
ENN/: .coverage  README.md  pyproject.toml  requirements.txt  setup.py  test_simple_pushout.py
ENN/baselines/: baseline_models.py
ENN/benchmarks/: benchmark_framework.py  bicep_integration_benchmark.py  run_comprehensive_benchmark.py  stochastic_computation_benchmark.py
ENN/enn/: __init__.py  bicep_adapter.py  bicep_layers.py  config.py  enhanced_model.py  layers.py  memory.py  model.py  multihead_attention.py  pushout.py  scheduler.py  sparsity_control.py  state_collapse.py  training.py  utils.py  validation.py
ENN/examples/: usage.py
ENN/tests/: test_attention.py  test_memory.py  test_pushout_head.py  test_state_collapse.py
FusionAlpha/: .gitignore  Dockerfile  LICENSE  README.md  main.py  pytest.ini  requirements.txt  setup.py
Generative-Manim-Template-main/: .gitignore  DOMAINS.md  README.md  docker_deploy.sh  (+4 more)
(+211 files in other folders)
