[build-system]
requires    = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name             = "bicep"
version          = "0.1.0"
description      = "…"
readme           = "README.md"
requires-python  = ">=3.10"
dependencies = [
  "torch>=2.0",
  "triton>=2.0",
  "numpy>=1.24.0,<2.0.0",
  "click>=8.1.7",
  "cloudpickle>=3.1.0",
  "contourpy>=1.3.0",
  "cycler>=0.12.1",
  "dask>=2024.10.0",
  "distributed>=2024.10.0",
  "fonttools>=4.54.1",
  "fsspec>=2024.10.0",
  "importlib_metadata>=8.5.0",
  "Jinja2>=3.1.4",
  "kiwisolver>=1.4.7",
  "locket>=1.0.0",
  "MarkupSafe>=3.0.2",
  "matplotlib>=3.9.2",
  "msgpack>=1.1.0",
  "networkx>=3.4.2",
  "packaging>=24.1",
  "partd>=1.4.2",
  "pillow>=11.0.0",
  "psutil>=6.1.0",
  "pyparsing>=3.2.0",
  "python-dateutil>=2.9.0.post0",
  "PyYAML>=6.0.2",
  "six>=1.16.0",
  "sortedcontainers>=2.4.0",
  "tblib>=3.0.0",
  "toolz>=1.0.0",
  "tornado>=6.4.2",
  "urllib3>=2.2.3",
  "zict>=3.0.0",
  "zipp>=3.20.2",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
]
gpu = [
  "cupy-cuda12x>=12.6",
]

[tool.setuptools.packages.find]
where = ["src"]

